# elfpack

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
aux/: msfrc
aux/triage/: elfpack_BPF_snoop_rules.bt  elfpack_stix.py  elfpack_yar.py  elfpack_yar.requirements.txt
src/: elfioutil.cpp  elfioutil.h  elfldr.cpp  elfldrlib.cpp  elfpack.cpp  main.cpp
src/include/: elfldr.h  elfpack.h
src/lsecutil/: lsecutil.c  lsecutil.h
